# mockapi

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: admin.py  auth.py  main.py  mock.py  models.py  storage.py
cli/: main.py  slug.py
deploy/: ec2-setup.sh
tests/: conftest.py  test_admin_auth.py  test_admin_endpoint_update.py  test_admin_endpoints.py  test_cli.py  test_input_validation.py  test_mock_serving.py  test_slug.py  test_startup_security.py  test_storage.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.test.ts  api.ts  setupTests.ts  slug.test.ts  slug.ts  styles.css
ui/src/components/: Layout.test.tsx  Layout.tsx  TokenGate.tsx
ui/src/context/: AuthContext.tsx
ui/src/pages/: ConnectorForm.tsx  Connectors.test.tsx  Connectors.tsx  Home.tsx
