[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mockapi-cli"
version = "1.0.0"
description = "CLI for MockAPI — API mocking tool"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mockapi = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
